# ssht

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COPYRIGHT.txt  LICENSE.MIT.txt  MANIFEST.in  README.md  README.txt  addstyle  conanfile.py  conanfile.txt  f90doc_fpp  general_dl.f90  ln_multi  makefile  makefile_c  makefile_f90  pyproject.toml  python_install.md  run_tests  setup.cfg  setup.py  trapani.c
.github/workflow/: cmake.yml  python.yml
.github/workflows/: cmake.yml  conan.yml  python.yml  windows.yml
cmake/: FindFFTW3.cmake  SshtConfig.in.cmake  SshtConfigVersion.in.cmake  conan_dependencies.cmake  exporting.cmake  fetch_cmocka.cmake  python-setup.cmake  sshtConfig.in.cmake
doc/: index.html  index_ssht.html  stylesheet.css
doc/c/html/: dir_3b19ecf29356981f494745fbef7e56bf.html  dir_5412c759a77c32cc01090f2e25aab1f5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c7a17dbb9c7301c0cf24a41ffb6eb7fb.html  dirs.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_l.html  globals_m.html  globals_n.html  globals_r.html  globals_s.html  index.html  menudata.js  ssht_8h_source.html  ssht__about_8c.html  ssht__about_8c_source.html  ssht__adjoint_8c.html  ssht__adjoint_8c_source.html  ssht__adjoint_8h.html  ssht__adjoint_8h_source.html  ssht__core_8c.html  ssht__core_8c_source.html  ssht__core_8h.html  ssht__core_8h_source.html  ssht__dl_8c.html  ssht__dl_8c_source.html  ssht__dl_8h.html  ssht__dl_8h_source.html  ssht__error_8h.html  ssht__error_8h_source.html  ssht__sampling_8c.html  ssht__sampling_8h.html  (+6 more)
doc/images/: szip_logo.tiff
docs/: index.html
include/c/: ssht.h
include/ssht/: ssht_core.h  ssht_types.h
lib/c/: .gitignore
matlab/: arrayProduct.c  inset.m  makefile  makefile_f90  matsq.F  ssht_c2s.m  ssht_coord_c2s.m  ssht_coord_s2c.m  ssht_demo.m  ssht_demo2.m  ssht_demo3.m  ssht_demo4.m  ssht_elm2ind.m  ssht_forward.m  ssht_forward_mex.c  ssht_inverse.m  ssht_inverse_mex.c  ssht_mex.h  ssht_plot_sphere.m  ssht_sampling.m  ssht_sampling_mex.c  timestwo.F
src/c/: CMakeLists.txt  doxygen.config  makefile  ssht.h  ssht_about.c  ssht_adjoint.c  ssht_adjoint.h  ssht_core.c  ssht_core.h  ssht_dl.c  ssht_dl.h  ssht_error.h  ssht_fftw.c  ssht_fftw.h  ssht_idl_dl.c  ssht_idl_dl.h  ssht_sampling.c  ssht_sampling.h  ssht_sharp_utils.c  ssht_sharp_utils.h  ssht_test.c  ssht_types.h  ssht_version.in.h
src/f90/: doxygen.config
src/idl/: ssht_idl_test.pro
src/matlab/: .gitignore  makefile  ssht_c2s.m  ssht_demo.m  ssht_demo0.m  ssht_demo1.m  ssht_demo2.m  ssht_demo3.m  ssht_demo4.m  ssht_demo5.m  ssht_demo6.m  ssht_demo7.m  ssht_demo8.m  ssht_demo_rotation.m  ssht_dl.m  ssht_dl_mex.c  ssht_dln.m  ssht_dln_mex.c  ssht_elm2ind.m  ssht_forward.m  ssht_forward_adjoint.m  ssht_forward_adjoint_mex.c  ssht_forward_mex.c  ssht_ind2elm.m  ssht_inverse.m  ssht_inverse_adjoint.m  ssht_inverse_adjoint_mex.c  ssht_inverse_mex.c  ssht_mex.h  ssht_plot_harmonic.m  ssht_plot_mollweide.m  ssht_plot_sphere.m  ssht_rotate.m  ssht_rotate_flm.m  ssht_rotate_flm_dl.m  ssht_s2c.m  ssht_sampling.m  ssht_sampling_mex.c  ssht_ylm.m
src/mod/: ssht_core_mod.f90  ssht_dl_mod.f90  ssht_error_mod.f90  ssht_fileio_mod.f90  ssht_sampling_mod.f90  ssht_types_mod.f90
src/prog/: ssht_analysis.f90  ssht_fits2mat.f90  ssht_forward.f90  ssht_inverse.f90  ssht_mat2fits.f90  ssht_synthesis.f90  ssht_test.f90  ssht_wav2sky.f90  ssht_wavplot.f90
src/pyssht/: CMakeLists.txt  SSHT_Python_Documentation.md  __init__.py  cpyssht.pyx  ducc0.pyx  ducc_demo.py  ducc_interface.pyx  ducctest.py  exceptions.py  parameters.py  pyssht.pyx  pyssht_demo_0.py  pyssht_demo_1.py  pyssht_demo_2.py  pyssht_demo_3.py  pyssht_demo_4.py  pyssht_demo_5.py  pyssht_demo_6.py  pyssht_demo_7.py  pyssht_test.py
src/python/: CMakeLists.txt  SSHT_Python_Documentation.md  pyssht.c  pyssht.pyx  pyssht_demo_0.py  pyssht_demo_1.py  pyssht_demo_2.py  pyssht_demo_3.py  pyssht_demo_4.py  pyssht_demo_5.py  pyssht_demo_6.py  pyssht_demo_7.py  pyssht_test.py
test_package/: CMakeLists.txt  conanfile.py  example.c
tests/: CMakeLists.txt  interface.c  interface.h  test_L0016_s00.txt  test_L0016_s02.txt  test_L0016_s10.txt  test_L0032_s00.txt  test_L0032_s02.txt  test_L0032_s10.txt  test_L0064_s00.txt  test_L0064_s02.txt  test_L0064_s10.txt  test_L0128_s00.txt  test_L0128_s02.txt  test_L0128_s10.txt  test_L0256_s00.txt  test_L0256_s02.txt  test_L0256_s10.txt  test_L0512_s00.txt  test_L0512_s02.txt  test_L0512_s10.txt  test_L1024_s00.txt  test_L1024_s02.txt  test_L1024_s10.txt  test_L2048_s00.txt  test_L2048_s02.txt  test_L2048_s10.txt  test_ducc0.py  test_pyssht.py  test_ssht.c  utilities.c  utilities.h
tests/mac/: test_L0016_s00.txt  test_L0016_s10.txt  test_L0032_s10.txt  test_L0064_s00.txt  test_L0064_s10.txt  test_L0128_s00.txt  test_L0128_s10.txt  test_L1024_s00.txt  test_L1024_s10.txt  test_L2048_s00.txt  test_L2048_s10.txt
tests/risbo/: test_L0016_s10.txt  test_L0032_s10.txt  test_L0064_s00.txt  test_L0064_s10.txt  test_L0128_s00.txt  test_L0128_s10.txt  test_L0256_s00.txt  test_L0512_s00.txt  test_L0512_s10.txt  test_L1024_s00.txt  test_L4096_s10.txt
tests/risbo/linux/: test_L0016_s00.txt  test_L0016_s02.txt  test_L0032_s00.txt  test_L0032_s02.txt  test_L0064_s02.txt  test_L0128_s02.txt  test_L0256_s02.txt  test_L0256_s10.txt  test_L0512_s02.txt  test_L1024_s02.txt  test_L1024_s10.txt  test_L2048_s00.txt  test_L2048_s02.txt  test_L2048_s10.txt  test_L4096_s00.txt  test_L4096_s02.txt
tests/trapani/linux/: test_L0016_s00.txt  test_L0016_s10.txt  test_L0032_s10.txt  test_L0064_s10.txt  test_L0128_s00.txt  test_L0256_s10.txt  test_L0512_s00.txt  test_L1024_s00.txt  test_L2048_s10.txt
tests/trapani/mac/: test_L0032_s00.txt  test_L0256_s00.txt  test_L0256_s10.txt  test_L0512_s00.txt  test_L0512_s10.txt
tests/unix/: test_L0032_s00.txt  test_L0064_s00.txt  test_L0128_s10.txt  test_L0256_s00.txt  test_L0512_s10.txt  test_L1024_s10.txt  test_L2048_s00.txt  test_L4096_s00.txt
typings/pyssht/: __init__.pyi
(+281 files in other folders)
