[project]
name = "pyssht"
version = "1.5.3rc1"
authors = [
    {name="J. D. McEwen"},
    {name="C. R. G. Wallis"},
    {name="M. Buttner"},
    {name="B. Leistedt"},
    {name="Y. Wiaux"}
]
description = "Fast spin spherical transforms"
readme = "src/pyssht/SSHT_Python_Documentation.md"
license = "GPL-3.0-or-later"
keywords = ["numerical transforms", "signal processing", "science"]
dependencies = [ "numpy", "scipy" ]
requires-python = ">= 3.8"

[project.urls]
Homepage = "http://astro-informatics.github.io/ssht/"
Repository = "http://github.com/astro-informatics/ssht.git"
Issues = "http://github.com/astro-informatics/ssht/issues"

[project.optional-dependencies]
ducc0 = ["ducc0>=0.18"]

[build-system]
requires = ["scikit-build-core", "cython>=3.0.0", "numpy", "conan"]
build-backend = "scikit_build_core.build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.scikit-build]
cmake.args=[
    "-DBUILD_TESTING:BOOL=OFF",
    "-DCMAKE_PROJECT_TOP_LEVEL_INCLUDES=./cmake/conan_provider.cmake",
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
]
ninja.make-fallback = false
build-dir="build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
