add_cython_target(pyssht_sources pyssht.pyx C PY3)
add_cython_target(ducc0_sources ducc0.pyx C PY3)
add_library(pyssht MODULE ${pyssht_sources})
add_library(ducc0 MODULE ${ducc0_sources})
python_extension_module(pyssht)
python_extension_module(ducc0)
target_link_libraries(pyssht ssht)
target_include_directories(pyssht PUBLIC "${PROJECT_SOURCE_DIR}/src/c"
                                         ${NumPy_INCLUDE_DIRS})
target_include_directories(ducc0 PUBLIC ${NumPy_INCLUDE_DIRS})
if(WIN32)
    target_compile_definitions(pyssht PUBLIC MS_WIN64)
    target_compile_definitions(ducc0 PUBLIC MS_WIN64)
endif()
install(TARGETS pyssht ducc0 LIBRARY DESTINATION src/pyssht)
